[project]
name = "adaptive-energy-policy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "imageio[ffmpeg]>=2.37.0",
    "matplotlib>=3.10.7",
    "pot>=0.9.6.post1",
    "robosuite>=1.5.1",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
